# CounterStrike

./: CMakeLists.txt  README.md  valgrind_tesst.sh
Vector/: CMakeLists.txt  Vector.c  Vector.h
include/: BattleField.h
include/Players/: Player.h  PlayerVitalData.h
include/Utilities/: Defines.h  ErrorHandling.h  Utilities.h
include/Weapons/: Pistol.h
src/: BattleField.c  main.c
src/Players/: Player.c  PlayerVitalData.c
src/Utilities/: ErrorHandling.c  Utilities.c
src/Weapons/: Pistol.c
